Fix image paths

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                 <div class="row member-list">
                     <div class="col col-third s-col-full mt-32">
                         <h4 class="member-name">Name</h4>
-                        <img class="member-img" src="/assets/img/bandmember.jpg">
+                        <img class="member-img" src="./assets/img/bandmember.jpg">
                     </div>
                     <div class="col col-third s-col-full mt-32">
                         <h4 class="member-name">Name</h4>
-                        <img class="member-img" src="/assets/img/bandmember.jpg">
+                        <img class="member-img" src="./assets/img/bandmember.jpg">
                     </div>
                     <div class="col col-third s-col-full mt-32">
                         <h4 class="member-name">Name</h4>
-                        <img class="member-img" src="/assets/img/bandmember.jpg">
+                        <img class="member-img" src="./assets/img/bandmember.jpg">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
 
                     <div class="row ticket-section">
                         <div class="col col-third s-col-full mt-16">
-                            <img class="place-img" src="/assets/img/newyork-tour.jpg">
+                            <img class="place-img" src="./assets/img/newyork-tour.jpg">
                             <div class="ticket-content">
                                 <h3 class="ticket-title">New York</h3>
                                 <p class="ticket-date">Fri 27 Nov 2016</p>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img class="place-img" src="/assets/img/paris-tour.jpg">
+                            <img class="place-img" src="./assets/img/paris-tour.jpg">
                             <div class="ticket-content">
                                 <h3 class="ticket-title">Paris</h3>
                                 <p class="ticket-date">Fri 27 Nov 2016</p>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img class="place-img" src="/assets/img/sanfrancisco-tour.jpg">
+                            <img class="place-img" src="./assets/img/sanfrancisco-tour.jpg">
                             <div class="ticket-content">
                                 <h3 class="ticket-title">San Francisco</h3>
                                 <p class="ticket-date">Sun 29 Nov 2016</p>
